Bug 402783 - Transaction editor is not reset
Summary: Transaction editor is not reset
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-02 11:40 UTC by Thomas Baumgart
Modified: 2019-01-02 12:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-01-02 11:40:09 UTC
SUMMARY
In some circumstances, the transaction editor is not closed and causes problems when loading a new file.

STEPS TO REPRODUCE
1. Open an existing file
2. Open the ledger view
3. Start creating a new transaction
4. Press Ctrl+N to create a new file
5. Escape out of the dialog
6. Open another file


OBSERVED RESULT
The old ledger contents is still visible and the transaction editor active

EXPECTED RESULT
Only contents of the newly loaded file should be visible and the transaction editor inactive.

ADDITIONAL INFORMATION
Replacing "3. Start creating a new transaction" with "3. Start editing an existing transaction" leaves the user in a different and more weird scenario which also needs to be fixed (endless loop with question about to discard or save the change which is not present anymore)
Comment 1 Thomas Baumgart 2019-01-02 12:02:31 UTC
Git commit b7a3cebd6ec88fe5a0d31bca58b9f3a6fd47d2de by Thomas Baumgart.
Committed on 02/01/2019 at 12:03.
Pushed by tbaumgart into branch '5.0'.

Destroy transaction editor if still existent when closing file

A leftover transaction editor is not a good idea. A better mechanism
would be to disable any file action while an editor is active but that
will be a larger change to be considered in the future.
FIXED-IN: 5.0.3

M  +6    -0    kmymoney/views/kgloballedgerview.cpp
M  +3    -0    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/b7a3cebd6ec88fe5a0d31bca58b9f3a6fd47d2de