Destroy transaction editor if still existent when closing file

A leftover transaction editor is not a good idea. A better mechanism
would be to disable any file action while an editor is active but that
will be a larger change to be considered in the future.

BUG: 402783
FIXED-IN: 5.0.3